--- a/PracticeEvaluator/src/main/res/layout/activity_main.xml
+++ b/PracticeEvaluator/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f8f8f8"
-    tools:context="com.hencoder.practiceevaluator.com.noblel.practiceevaluator.MainActivity">
+    tools:context="com.noblel.practiceevaluator.MainActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
